syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/report_log_entry.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for ReportLogs.
service ReportLogEntryStorage {
  // Persists a ReportLogEntry.
  rpc CreateReportLogEntry(ReportLogEntry) returns (ReportLogEntry);
}
